# z2p

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
src/z2p_svc/: __init__.py  app.py  asgi.py  auth_service.py  chat_service.py  config.py  exceptions.py  fe_version.py  file_uploader.py  image_uploader.py  logger.py  model_service.py  models.py  proxy_manager.py  routes.py  signature_generator.py  temp.py
src/z2p_svc/services/chat/: converter.py  non_streaming.py  streaming.py  tool_manager.py
src/z2p_svc/services/toolify/: __init__.py  core.py  detector.py  parser.py  prompt.py
src/z2p_svc/utils/: error_handler.py  uuid_helper.py
tests/: __init__.py  conftest.py  pytest.ini  test_e2e.py  test_http_errors.py
tests/fixtures/: __init__.py  builders.py  mocks.py
tests/integration/: test_chat_integration.py  test_toolify_integration.py
tests/unit/: test_chat_service.py  test_config.py  test_converter.py  test_exceptions.py  test_fe_version.py  test_file_uploader.py  test_model_service.py  test_signature_generator.py  test_tool_manager.py  test_toolify_core.py  test_toolify_detector.py  test_toolify_parser.py  test_toolify_prompt.py
